Default theme spacing fixes

--- a/css/mobiscroll.widget.css
+++ b/css/mobiscroll.widget.css
@@ -167,12 +167,12 @@
 /* Default theme */
 .mbsc-mobiscroll .dwwr {
     min-width: 220px;
-    padding: .5em 0;
     background: #f7f7f7;
     color: #454545;
     font-size: 16px;
 }
 .mbsc-mobiscroll .dwv {
+    padding-top: .6666em;
     color: #4eccc4;
     font-size: .75em;
     text-transform: uppercase;
@@ -182,7 +182,7 @@
     display: block;
     overflow: hidden;
     text-align: right;
-    padding: 0 .5em;
+    padding: 0 .5em .5em .5em;
 }
 .mbsc-mobiscroll .dwbw {
     display: block;
